[gd_scene load_steps=35 format=3 uid="uid://bcscmtllfgmex"]

[ext_resource type="Theme" uid="uid://dxmwch8d4tvvj" path="res://user-interface/resource/theme/Menu.tres" id="1_fll5i"]
[ext_resource type="Shader" path="res://level/background/misty-lake/water.gdshader" id="2_e4p0q"]
[ext_resource type="Script" path="res://user-interface/mainMenu/Menu.gd" id="2_pnltk"]
[ext_resource type="Script" path="res://user-interface/control-node/SFXButton.gd" id="4_4sjp2"]
[ext_resource type="Texture2D" uid="uid://eriecmar2l3j" path="res://level/background/misty-lake/water-day.tres" id="4_c77u2"]
[ext_resource type="Texture2D" uid="uid://bgh4r80tk5o7v" path="res://level/background/misty-lake/water-noise.tres" id="5_740wl"]
[ext_resource type="Shortcut" uid="uid://ctyij10r0l1ly" path="res://user-interface/resource/shortcut/1.tres" id="8_j2dc5"]
[ext_resource type="Shortcut" uid="uid://dt16jmboepp4k" path="res://user-interface/resource/shortcut/2.tres" id="10_mu27k"]
[ext_resource type="Shortcut" uid="uid://bcrumydhtp6h7" path="res://user-interface/resource/shortcut/3.tres" id="11_2tfm1"]
[ext_resource type="Shortcut" uid="uid://4f8bjowu8qyx" path="res://user-interface/resource/shortcut/4.tres" id="12_kncoo"]
[ext_resource type="Shortcut" uid="uid://0tqixtxtuj0m" path="res://user-interface/resource/shortcut/5.tres" id="13_w5ctg"]
[ext_resource type="FontFile" uid="uid://c7ppp33ch6e5" path="res://user-interface/resource/font/Vbutlong.ttf" id="14_fdwt6"]
[ext_resource type="Script" path="res://user-interface/mainMenu/EnetHost.gd" id="14_ix6yc"]
[ext_resource type="Script" path="res://user-interface/control-node/SFXAcceptDialog.gd" id="14_prvet"]
[ext_resource type="PackedScene" uid="uid://ct54eirbcf4pb" path="res://user-interface/back.tscn" id="14_sene6"]
[ext_resource type="Script" path="res://user-interface/control-node/SFXConfirmDialog.gd" id="15_ok3rl"]
[ext_resource type="StyleBox" uid="uid://bljqcvjdws526" path="res://user-interface/resource/theme/black.tres" id="16_7kqrr"]
[ext_resource type="Script" path="res://user-interface/mainMenu/EnetJoin.gd" id="16_23h4f"]
[ext_resource type="Script" path="res://user-interface/mainMenu/WebRtcHost.gd" id="16_ub6jj"]
[ext_resource type="Shortcut" uid="uid://xs30oatyn1i6" path="res://user-interface/resource/shortcut/enter.tres" id="17_3rmfx"]

[sub_resource type="ViewportTexture" id="ViewportTexture_0np8g"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fx67d"]
resource_local_to_scene = true
shader = ExtResource("2_e4p0q")
shader_parameter/reflection = SubResource("ViewportTexture_0np8g")
shader_parameter/water_velocity = Vector2(0, 0)
shader_parameter/water_opacity = 0.5
shader_parameter/color_map = ExtResource("4_c77u2")
shader_parameter/wave_velocity = Vector2(0, 1)
shader_parameter/wave_distortion = 0.2
shader_parameter/wave_multiplyer = -5.0

[sub_resource type="Animation" id="Animation_cdonq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/color_map:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedColorArray(1, 1, 1, 1, 0.1105, 0.16445, 0.65, 1)]
}

[sub_resource type="Animation" id="Animation_mmw0i"]
resource_name = "day"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/color_map:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedColorArray(1, 1, 1, 1, 0.1105, 0.16445, 0.65, 1), PackedColorArray(0, 0.768627, 1, 1, 0.1105, 0.16445, 0.65, 1)]
}

[sub_resource type="Animation" id="Animation_m2vyk"]
resource_name = "dusk"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/color_map:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedColorArray(0, 0.768627, 1, 1, 0.1105, 0.16445, 0.65, 1), PackedColorArray(1, 0.560784, 0.509804, 1, 0.1105, 0.16445, 0.65, 1)]
}

[sub_resource type="Animation" id="Animation_mshww"]
resource_name = "night"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/color_map:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedColorArray(1, 0.560784, 0.509804, 1, 0.1105, 0.16445, 0.65, 1), PackedColorArray(0.1105, 0.16445, 0.65, 1, 0, 0.129, 0.18, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_atxya"]
_data = {
"RESET": SubResource("Animation_cdonq"),
"day": SubResource("Animation_mmw0i"),
"dusk": SubResource("Animation_m2vyk"),
"night": SubResource("Animation_mshww")
}

[sub_resource type="Animation" id="Animation_o46ky"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("host:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("host:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Host Party"]
}

[sub_resource type="Animation" id="Animation_cp3fs"]
resource_name = "waitting"
length = 4.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("host:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("host:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["Waiting for connection", "Waiting for connection.", "Waiting for connection..", "Waiting for connection..."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h3542"]
_data = {
"RESET": SubResource("Animation_o46ky"),
"waitting": SubResource("Animation_cp3fs")
}

[sub_resource type="Animation" id="Animation_s48o5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Join:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": ["Join Party"]
}

[sub_resource type="Animation" id="Animation_j5e3v"]
resource_name = "connecting"
length = 6.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Join:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": ["Connecting", "Connecting.", "Connecting..", "Connecting..."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_at5y1"]
_data = {
"RESET": SubResource("Animation_s48o5"),
"connecting": SubResource("Animation_j5e3v")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ke7n"]

[node name="Menu" type="Control"]
texture_filter = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fll5i")
script = ExtResource("2_pnltk")

[node name="MistyLake" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_fx67d")
texture = ExtResource("5_740wl")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="MistyLake"]
libraries = {
"": SubResource("AnimationLibrary_atxya")
}

[node name="Main" type="VBoxContainer" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -136.0
offset_right = 270.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="solo" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = ExtResource("8_j2dc5")
text = "1.Solo"
script = ExtResource("4_4sjp2")

[node name="host" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = ExtResource("10_mu27k")
text = "2.Host a game"
script = ExtResource("4_4sjp2")

[node name="join" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = ExtResource("11_2tfm1")
text = "3.Join a game"
script = ExtResource("4_4sjp2")

[node name="credits" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = ExtResource("12_kncoo")
text = "4.Credits"
script = ExtResource("4_4sjp2")

[node name="language" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = ExtResource("13_w5ctg")
text = "5.Language"
script = ExtResource("4_4sjp2")

[node name="ConnectionMethod" type="ConfirmationDialog" parent="Main"]
disable_3d = true
transparent_bg = true
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
initial_position = 1
size = Vector2i(500, 215)
borderless = true
always_on_top = true
transparent = true
ok_button_text = "WebRTC"
dialog_text = "Enet: Fast and Simple. But only work in LAN or port fowarding
WebRTC: More tricky but works."
dialog_autowrap = true
cancel_button_text = "Enet"
script = ExtResource("15_ok3rl")

[node name="EnetHost" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -132.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_ix6yc")

[node name="back" parent="EnetHost" instance=ExtResource("14_sene6")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EnetHost"]
layout_mode = 2

[node name="ip" type="LineEdit" parent="EnetHost/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Error getting IP address !"
max_length = 39
editable = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
select_all_on_focus = true

[node name="port" type="LineEdit" parent="EnetHost/HBoxContainer"]
layout_mode = 2
text = "6567"
placeholder_text = "6567"
max_length = 5
select_all_on_focus = true

[node name="host" type="Button" parent="EnetHost"]
layout_mode = 2
text = "Host Party"
script = ExtResource("4_4sjp2")

[node name="Label" type="Label" parent="EnetHost"]
layout_mode = 2
size_flags_vertical = 10
text = "Tip: Try a different port if not working. If still doesn't work, let your friend host.
"
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnetHost"]
libraries = {
"": SubResource("AnimationLibrary_h3542")
}

[node name="Timer" type="Timer" parent="EnetHost"]
wait_time = 3.0

[node name="EnetJoin" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -117.0
offset_bottom = 483.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("16_23h4f")

[node name="back" parent="EnetJoin" instance=ExtResource("14_sene6")]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="EnetJoin"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="EnetJoin"]
layout_mode = 2

[node name="ip" type="LineEdit" parent="EnetJoin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Paste your friend IP address:"
max_length = 35
clear_button_enabled = true

[node name="port" type="LineEdit" parent="EnetJoin/HBoxContainer"]
layout_mode = 2
text = "6567"
placeholder_text = "6567"

[node name="Join" type="Button" parent="EnetJoin"]
layout_mode = 2
text = "Join Party"
script = ExtResource("4_4sjp2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnetJoin"]
libraries = {
"": SubResource("AnimationLibrary_at5y1")
}

[node name="Timer" type="Timer" parent="EnetJoin"]

[node name="WebRtcHost" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -105.0
offset_bottom = 481.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("16_ub6jj")

[node name="back" parent="WebRtcHost" instance=ExtResource("14_sene6")]
layout_mode = 2

[node name="Offer" type="LineEdit" parent="WebRtcHost"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Preparing your *Offer*..."
editable = false
select_all_on_focus = true

[node name="Label" type="Label" parent="WebRtcHost"]
layout_mode = 2
text = "Copy your *Offer* above and send it to your friend."
autowrap_mode = 3

[node name="ReplyOffer" type="LineEdit" parent="WebRtcHost"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Paste your friend *Offer* here"
select_all_on_focus = true

[node name="WebRtcJoin" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_top = 337.0
offset_right = 40.0
offset_bottom = 377.0

[node name="back" parent="WebRtcJoin" instance=ExtResource("14_sene6")]
layout_mode = 2

[node name="Credits" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="back" parent="Credits" instance=ExtResource("14_sene6")]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Credits"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 2

[node name="Author" type="RichTextLabel" parent="Credits/TabContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("16_7kqrr")
text = "aasf"

[node name="Licenses" type="RichTextLabel" parent="Credits/TabContainer"]
visible = false
layout_mode = 2
theme_override_styles/normal = ExtResource("16_7kqrr")
text = "s"

[node name="Language" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_right = 40.0
offset_bottom = 40.0

[node name="back" parent="Language" instance=ExtResource("14_sene6")]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="Language"]
layout_mode = 2
size_flags_vertical = 3

[node name="enter" type="Button" parent="Language"]
layout_mode = 2
shortcut = ExtResource("17_3rmfx")
script = ExtResource("4_4sjp2")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
size = Vector2i(540, 960)
render_target_update_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="SubViewportContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("14_fdwt6")
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[outline_color=black]Tou[/outline_color][color=black]hou[/color][outline_size=1] Double[/outline_size]
[outline_color=black][color=ffb273]   Spell[/color] [/outline_color][color=c24244]Card"
autowrap_mode = 2

[node name="Label" type="Label" parent="SubViewportContainer/SubViewport/RichTextLabel"]
layout_mode = 0
offset_left = 262.0
offset_top = 7.0
offset_right = 500.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_fdwt6")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxEmpty_6ke7n")
text = "Double"

[node name="error" type="AcceptDialog" parent="."]
disable_3d = true
transparent_bg = true
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
initial_position = 1
title = "Network error"
size = Vector2i(500, 200)
exclusive = false
borderless = true
always_on_top = true
transparent = true
popup_window = true
max_size = Vector2i(500, 32768)
dialog_autowrap = true
script = ExtResource("14_prvet")

[connection signal="pressed" from="Main/solo" to="." method="_on_solo_pressed"]
[connection signal="pressed" from="Main/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Main/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Main/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Main/language" to="." method="_on_language_pressed"]
[connection signal="canceled" from="Main/ConnectionMethod" to="." method="_on_connection_method_canceled"]
[connection signal="confirmed" from="Main/ConnectionMethod" to="." method="_on_connection_method_confirmed"]
[connection signal="pressed" from="EnetHost/back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="EnetHost/HBoxContainer/port" to="EnetHost" method="_on_port_text_changed"]
[connection signal="pressed" from="EnetHost/host" to="EnetHost" method="_on_host_pressed"]
[connection signal="timeout" from="EnetHost/Timer" to="EnetHost" method="_on_timer_timeout"]
[connection signal="pressed" from="EnetJoin/back" to="." method="_on_back_pressed"]
[connection signal="item_clicked" from="EnetJoin/ItemList" to="EnetJoin" method="_on_item_list_item_clicked"]
[connection signal="text_changed" from="EnetJoin/HBoxContainer/port" to="EnetJoin" method="_on_port_text_changed"]
[connection signal="pressed" from="EnetJoin/Join" to="EnetJoin" method="_on_join_pressed"]
[connection signal="timeout" from="EnetJoin/Timer" to="EnetJoin" method="_on_timer_timeout"]
[connection signal="pressed" from="WebRtcHost/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="WebRtcJoin/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Credits/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Language/back" to="." method="_on_back_pressed"]
